<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="30dp"
    tools:context=".view.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mail"
            android:text="admin@gmail.com"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="egomen12"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/md_theme_light_onSurface" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tw_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/md_theme_light_primary"/>

    </LinearLayout>




</LinearLayout>