<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.findhouse.view.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_userTypeSelectionFragment"
            app:destination="@id/userTypeSelectionFragment" />
        <action
            android:id="@+id/action_loginFragment_to_inAppActivity"
            app:destination="@id/inAppActivity" />
    </fragment>
    <fragment
        android:id="@+id/userTypeSelectionFragment"
        android:name="com.example.findhouse.view.UserTypeSelectionFragment"
        android:label="fragment_user_type_selection"
        tools:layout="@layout/fragment_user_type_selection" >
        <action
            android:id="@+id/action_userTypeSelectionFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.findhouse.view.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <argument
            android:name="userType"
            app:argType="string" />
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <activity
        android:id="@+id/inAppActivity"
        android:name="com.example.findhouse.InAppActivity"
        android:label="activity_in_app"
        tools:layout="@layout/activity_in_app" />
</navigation>